To check the date pushed to branch on 2nd and merge in 3rd

--- a/Codefresh.yaml
+++ b/Codefresh.yaml
@@ -28,6 +28,7 @@ steps:
   #  tag: "latest"
   #  dockerfile: "Dockerfile"
   #  stage: "build"
+  #I have commented above these
 
   test:
     title: "Running test"
